@@ -6,16 +6,15 @@
  * in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
+ * KIND, either express or implied.  See the License for the
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.wso2.carbon.identity.application.authenticator.fido;
 
 import com.yubico.u2f.data.messages.AuthenticateRequestData;
@@ -70,7 +69,7 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
             U2FService u2FService = U2FService.getInstance();
             //TODO enhancement: tenant domain, user store domain
             FIDOUser fidoUser = new FIDOUser(user.getUserName(), user.getTenantDomain(),
-                                             user.getUserStoreDomain(), AuthenticateResponse.fromJson(tokenResponse));
+                    user.getUserStoreDomain(), AuthenticateResponse.fromJson(tokenResponse));
             fidoUser.setAppID(appID);
             u2FService.finishAuthentication(fidoUser);
         } else {
@@ -116,7 +115,7 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
         try {
             //authentication page's URL.
             String loginPage = ConfigurationFacade.getInstance().getAuthenticationEndpointURL();
-            loginPage.replace("login.do", "authentication.jsp");
+            loginPage = loginPage.replace("login.do", "authentication.jsp");
             //username from basic authenticator.
             AuthenticatedUser user = getUsername(context);
             //origin as appID eg.: http://example.com:8080
@@ -129,14 +128,14 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
 
 
                 response.sendRedirect(response.encodeRedirectURL(loginPage + ("?"))
-                                      + "&authenticators=" + getName() + ":" + "LOCAL" + "&type=fido&sessionDataKey=" +
-                                      request.getParameter("sessionDataKey") +
-                                      "&data=" + data.toJson());
+                        + "&authenticators=" + getName() + ":" + "LOCAL" + "&type=fido&sessionDataKey=" +
+                        request.getParameter("sessionDataKey") +
+                        "&data=" + data.toJson());
             } else {
                 String redirectURL = loginPage.replace("login.do", "retry.do");
-                redirectURL = response.encodeRedirectURL(redirectURL + ("?")) + "&failedUsername=" + URLEncoder.encode(user.getUserName(), "UTF-8") +
-                              "&statusMsg=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_ERROR_MESSAGE, "UTF-8") +
-                              "&status=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_STATUS, "UTF-8");
+                redirectURL = response.encodeRedirectURL(redirectURL + ("?")) + "&failedUsername=" + URLEncoder.encode(user.getUserName(), FIDOAuthenticatorConstants.UTF_8) +
+                        "&statusMsg=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_ERROR_MESSAGE, FIDOAuthenticatorConstants.UTF_8) +
+                        "&status=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_STATUS, FIDOAuthenticatorConstants.UTF_8);
                 response.sendRedirect(redirectURL);
             }
 
@@ -158,8 +157,8 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
         AuthenticatedUser authenticatedUser = null;
         for (int i = 1; i <= context.getSequenceConfig().getStepMap().size(); i++) {
             if (context.getSequenceConfig().getStepMap().get(i).getAuthenticatedUser() != null &&
-                context.getSequenceConfig().getStepMap().get(i).getAuthenticatedAutenticator()
-                        .getApplicationAuthenticator() instanceof LocalApplicationAuthenticator) {
+                    context.getSequenceConfig().getStepMap().get(i).getAuthenticatedAutenticator()
+                            .getApplicationAuthenticator() instanceof LocalApplicationAuthenticator) {
                 authenticatedUser = context.getSequenceConfig().getStepMap().get(i).getAuthenticatedUser();
                 if (authenticatedUser.getUserStoreDomain() == null) {
                     authenticatedUser.setUserStoreDomain(FIDOAuthenticatorConstants.PRIMARY_USER_DOMAIN);
